// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager.ui.components.routed_link render should not render onClick when not provided 1`] = `
<A
  href="href"
>
  Content
</A>
`;

exports[`manager.ui.components.routed_link render should render other properties 1`] = `
<A
  href="href"
>
  Other content
</A>
`;

exports[`manager.ui.components.routed_link render should render with onClick when provided 1`] = `
<A
  href="#"
  onClick={[Function]}
>
  Content
</A>
`;
